--- a/css-learning/src/App.css
+++ b/css-learning/src/App.css
@@ -88,26 +88,34 @@ body {
 }
 
 .hero-container .hero .left-section {
-    background-color: rgb(112,228,236);
+    background-color: rgb(112, 228, 236);
     height: 75vh;
     width: 50vw;
-}
-
-.hero-container .hero .left-section {
+    padding: 1em 5em;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 1em 5em;
 }
+
 
 .section-title {
     font-size: 3.5em;
     margin-bottom: 1em;
+    width: 70%;
 }
 
 .section-comment {
     font-size: 1.7em;
     margin-bottom: 2em;
+}
+
+.shop-now-btn {
+    background-color: black;
+    color: white;
+    font-size: 1em;
+    width: 55%;
+    border: none;
+    padding: 12px;
 }
 
 .hero-container .hero .section-images {
