--- a/css-learning/src/App.css
+++ b/css-learning/src/App.css
@@ -62,6 +62,7 @@ body {
     flex: 2;
     display: flex;
     justify-content: center;
+
 }
 
 .nav-bar .right-nav img {
@@ -84,46 +85,59 @@ body {
 }
 
 .hero {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 .hero-container .hero .left-section {
     background-color: rgb(112, 228, 236);
-    height: 75vh;
+    height: 45em;
     width: 50vw;
     padding: 1em 5em;
+    padding-left: 15em;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    align-items: center;
 }
 
 
 .section-title {
     font-size: 3.5em;
-    margin-bottom: 1em;
-    width: 70%;
+    margin-bottom: 0.5em;
+    width: 80%;
 }
 
 .section-comment {
     font-size: 1.7em;
-    margin-bottom: 2em;
+    margin-bottom: 1.5em;
+}
+
+.lower-left-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30rem;
 }
 
 .shop-now-btn {
     background-color: black;
     color: white;
     font-size: 1em;
-    width: 55%;
+    width: 100%;
     border: none;
     padding: 12px;
+    margin-bottom: 0.8em;
+}
+
+.join-message {
+    width: 100%;
+    text-align: center;
 }
 
 .hero-container .hero .section-images {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-
-    margin-top: 0px 20px;
+    margin-bottom: 1.5em;
 }
 
 .hero-container .hero .section-images img {
@@ -133,7 +147,7 @@ body {
 
 
 .hero-container .hero .right-section img {
-    height: 75vh;
+    height: 45em;
     width: 100%;
     object-fit: cover;
     object-position: center;
