--- a/css-learning/src/App.css
+++ b/css-learning/src/App.css
@@ -87,28 +87,41 @@ body {
 .hero {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    font-size: 0;
 }
 
 .hero-container .hero .left-section {
     background-color: rgb(112, 228, 236);
-    height: 45em;
+    height: 73vh;
     width: 50vw;
-    padding: 1em 5em;
-    padding-left: 15em;
+    padding: 1rem 5rem;
+    padding-left: 15rem;
     display: flex;
     align-items: center;
 }
 
+.reviews-container {
+    background-color: white;
+    width: 20rem;
+    padding: 0.5rem;
+    font-size: 0.8rem;
+    border-radius: 5px;
+}
+
+
+.star-count {
+    margin-right: 5px;
+}
 
 .section-title {
-    font-size: 3.5em;
-    margin-bottom: 0.5em;
+    font-size: 3.5rem;
+    margin-bottom: 0.5rem;
     width: 80%;
 }
 
 .section-comment {
-    font-size: 1.7em;
-    margin-bottom: 1.5em;
+    font-size: 1.7rem;
+    margin-bottom: 1.5rem;
 }
 
 .lower-left-section {
@@ -119,39 +132,58 @@ body {
 }
 
 .shop-now-btn {
-    background-color: black;
+    background-color: #241f21;
     color: white;
-    font-size: 1em;
+    font-size: 1rem;
     width: 100%;
     border: none;
     padding: 12px;
-    margin-bottom: 0.8em;
+    margin-bottom: 0.8rem;
 }
 
 .join-message {
     width: 100%;
     text-align: center;
+    font-size: 1rem;
 }
 
 .hero-container .hero .section-images {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    margin-bottom: 1.5em;
+    margin-bottom: 1.5rem;
 }
 
 .hero-container .hero .section-images img {
-    width: 5em;
-    height: 8em;
+    width: 5rem;
+    height: 8rem;
 }
 
 
 .hero-container .hero .right-section img {
-    height: 45em;
+    height: 73vh;
     width: 100%;
     object-fit: cover;
     object-position: center;
 }
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #241f21;
+    font-size: 0;
+}
+
+.footer-text {
+    font-size: 0.8rem;
+    font-weight: bold;
+    padding: 0.8rem 0rem;
+    color: white;
+}
+
+
 
 @media only screen and (max-width: 620px) {
     .nav-bar-container .nav-bar .right-nav {
