--- a/css-learning/src/App.css
+++ b/css-learning/src/App.css
@@ -13,6 +13,10 @@ body {
     margin-bottom: 1000px;
 }
 
+a:visited {
+    color: white;
+}
+
 .notif-bar {
     display: flex;
     justify-content: center;
@@ -253,7 +257,7 @@ body {
     }
 
     .mobile-nav {
-        display: flex;
+        display: none;
         flex-direction: column;
         position: fixed;
         margin-top: 4em;
@@ -268,6 +272,10 @@ body {
         padding-top: 0;
     }
 
+    .mobile-nav.is-open {
+        display: flex;
+    }
+
     .mobile-nav a, .mobile-nav a:visited {
         text-decoration: none;
         color: black;
@@ -275,7 +283,7 @@ body {
 
     .mobile-nav span{
         display: flex;
-        border-top: 1px grey solid;
+        border-top: 1px hsl(0, 1%, 85%, 70%) solid;
         width: 100%;
         padding: 0.8rem;
         align-items: center;
@@ -289,6 +297,7 @@ body {
     .items-display{
         display: flex;
         flex-direction: column;
+        width: 100%;
     }
 
     .items-display span {
@@ -301,6 +310,13 @@ body {
         width: 70px;
         margin: 0;
         padding: 0;
+    }
+
+    .items-display .item span .item-arrow {
+        margin-left: auto;
+        height: 50%;
+        width: 1.1%;
+        margin-right: 0.5em;
     }
 
     .item {
@@ -316,15 +332,36 @@ body {
         margin-right: 0.8em;
     }
 
+    .item-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
     .item-notification {
         display: flex;
+        justify-content: center;
+        align-items: center;
         background-color: rgba(107,227,237);
-        width: 5em;
         border-radius: 15px;
         font-size: 0.8rem;
-        padding: 0 1em;
         text-align: center;
+        width: 7em;
+        height: 1.3em;
+        margin-bottom: 0.7em;
     }
+
+    .item-title {
+        font-size: 1em;
+        font-weight: bold;
+    }
+
+    .item-description {
+        font-size: 0.7em;
+        font-weight: bold;
+    }
+
 
     .display {
         width: 100%;
